--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -4,6 +4,6 @@
 <title>Wurkn</title>
 <body>
 <h1>Wurkn</h1>
-<p>This is the historical task organizer of Robert</p>
+<p>This is Robert's historical task organizer</p>
 </body>
 </html>
