--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -15,14 +15,14 @@
 
 <p>Show what you've done and who you've done it with to prospective employers!</p>
 
-<ul style="list-style-type:none"><center>
+<ul style="list-style-type:none">
 
 <li>Who did you do it with?</li>
 <li>What did you do?</li>
 <li>When did you do it?</li>
 <li>Where did you do it?</li>
 <li>Why did you do it?</li>
-</center>
+
 </ul>
 
 <a href="mailto:frostfrost@gmail.com">Contact me</a>
