--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,8 +8,7 @@
 <body>
 <h1>Wurkn</h1>
 <p>Validate your work!</p>
-<background> <center><img src="images/wurkn_1.jpg"></center>
-</background>
+<center> <img src="images/wurkn_1.jpg"> </center>
 
 <p>You've done some amazing things in your life with some incredible people.</>
 
