--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,15 +6,35 @@
 </head>
 
 <body>
+<div class="wrapper">
+<header>
 <h1>Wurkn</h1>
 <p>Validate your work!</p>
-<center> <img src="images/wurkn_1.jpg"> </center>
+</header>
 
-<p>You've done some amazing things in your life with some incredible people.</>
+<center> 
+<div id="scrollDiv">
+            <header class="top-head">
+            <video class="top-head-video" muted loop autoplay >
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  <source src="mov_bbb.webm" type="video/webm">
+  Your browser does not support HTML5 video.
+</video>
+</center>
+</header>
+</div>
 
-<p>Show what you've done and who you've done it with to prospective employers!</p>
+<nav>
 
-<ul style="list-style-type:none">
+</nav>
+
+
+<section id="tag 1"><p>You've done some amazing things in your life with some incredible people.</p></section>
+
+<section id="tag 2"><p>Show what you've done and who you've done it with to prospective employers!</p></section>
+
+<article class="5 q"><ul style="list-style-type:none">
 
 <li>Who did you do it with?</li>
 <li>What did you do?</li>
@@ -22,11 +42,10 @@
 <li>Where did you do it?</li>
 <li>Why did you do it?</li>
 
-</ul>
+</ul></article>
 
-<a href="mailto:frostfrost@gmail.com">Contact me</a>
 
- <head>
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['timeline']});
@@ -49,9 +68,13 @@
         chart.draw(dataTable);
       }
     </script>
-  </head>
-  <body>
+
+  </body>
     <div id="timeline" style="height: 280px;"></div>
+
+<footer>
+<a href="mailto:frostfrost@gmail.com">Contact me</a>
+  </footer>
 
 </body>
 </html>
