--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,6 +5,10 @@
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
+	
+</script>
+
 </head>
 
 <body>
@@ -16,41 +20,88 @@
     </h1>
   </header>
 
-
-    <nav class="clearfix">
-    <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact us</a>
+     <nav class="clearfix">
+    <a href="#">
+    <h1>Home </h1>
+    </a>
+      <a href="#">
+      <h1>About </h1>
+      </a>
+      <a href="#">
+      <h1>Contact us</h1>
+      </a>
     </nav>
-<div class="clearfix">
 
-<div id="container">
+<section class="sections-wrapper">
+
+<div class="section-left">
+  LEFT
+  </div>
+
+<div class="section-middle">
+
+<a href="#" class="toggle-left"> toggle left </a>
+
+<a href="#" class="toggle-right"> toggle right</a>
+
+  <div id="container-views">
 
   <div class="column" id="column1">
   <h2>Who</h2>
-  <img src="images/wurkn_1.jpg" height="180" width="180"> 
+  <img src="images/wurkn_1.jpg"> 
   </div>
 
-<div class="column" id="column2">
+  <div class="column" id="column2">
   <h2>Where</h2>
-  <img src="images/wurkn_1.jpg" height="180" width="180"> 
+  <img src="images/wurkn_1.jpg"> 
   </div>
        
-<div class="column" id="column3">
+  <div class="column" id="column3">
   <h2>When</h2>
-  <img src="images/wurkn_1.jpg" height="180" width="180"> 
+  <img src="images/wurkn_1.jpg"> 
   </div>
 
   <div class="column" id="column4">
   <h2>Why</h2>
-  <img src="images/wurkn_1.jpg" height="180" width="180"> 
-  </div>
-  </div>
+  <img src="images/wurkn_1.jpg"> 
   </div>
 
+  </div>
+
+ <div id="timeline">
+ <img src="images/timeline.jpg" height="340" width="1200"> 
+ 
+</div>
+</div>
+
+
+
+  <div class="section-right">
+  RIGHT
+  </div>
+
+</section>
+  
+
       <footer>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
+    </h3>
     </footer>
   
+  <script> 
+  $( document ).ready(function() {
+    console.log( "ready!" );
+    $( ".toggle-left" ).click(function() {
+ $('body').toggleClass('left-active');
+});
+  $( ".toggle-right" ).click(function() {
+ $('body').toggleClass('right-active');
+
+});
+
+});
+
+</script>
+
 </body>
 </html>
